<resources>
    <string name="app_name">Fresco</string>
    <string name="splash_screen_image_content">splash screen image</string>
    <string name="first_onboarding_content">first onboarding</string>
    <string name="second_onboarding_content">second onboarding</string>
    <string name="scan_it">SCAN IT</string>
    <string name="take_a_picture_of_fruit_and_plant_and_scan_it_with_your_own_smartphone_camera">Take a picture of fruit and plant and scan it with your own smartphone camera</string>
    <string name="next">Next</string>
    <string name="get_the_knowledge">GET THE KNOWLEDGE</string>
    <string name="make_yourself_to_know_better_with_the_fruits_and_plants">Make yourself to know better with the fruits and plants</string>
    <string name="save_it">SAVE IT</string>
    <string name="save_the_picture_to_the_cloud">Save the picture to the cloud</string>
    <string name="login">Login</string>
    <string name="logo_app_content">logo app</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_login">button login</string>
    <string name="new_user_sign_up">New User? <b>Sign Up</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account_login">Already Have Account? <b>Login</b></string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="code_is_sent_to">Code is sent to </string>
    <string name="verify_and_change_password">Verify and Change Password</string>
    <string name="didn_t_receive_code_request_again">Didn’t receive code? <b>Request Again</b></string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="new_password">New Password</string>
    <string name="home">Home</string>
    <string name="upgrade">Upgrade</string>
    <string name="button_fruit_recognition_content">button fruit recognition</string>
    <string name="button_plant_recognition_content">button plant recognition</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="scan">Scan</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_capture_content">image capture</string>
    <string name="button_upload_photo_content">button upload photo</string>
    <string name="button_take_photo_content">button take photo</string>
    <string name="timer">00</string>
    <string name="logout">logout</string>
    <string name="ads">ads</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-7074988547859559/7690066729</string>
    <string name="reset">reset</string>
    <string name="scan_again">scan again</string>

    <string name="username">username</string>
    <string name="profile">Profile</string>
    <string name="text_username">username</string>
    <string name="text_email">email@gmail.com</string>
    <string name="text_phone">081212121212</string>
    <string name="plant">Plant</string>
    <string name="fruit">Fruit</string>
    <string name="not_found">Not Found</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="family">Family</string>
    <string name="genus">Genus</string>
    <string name="order">Order</string>
    <string name="nutritions">Nutritions</string>
    <string name="carbohydrates">carbohydrates</string>
    <string name="protein">protein</string>
    <string name="fat">fat</string>
    <string name="calories">calories</string>
    <string name="sugar">sugar</string>
    <string name="oops_this_fruit_is_rotten">Oops! This fruit is rotten</string>
    <string name="tap_see_button_to_see_the_dangerous_of_consuming_rotten_fruit">Tap see button to see the dangerous of consuming rotten fruit</string>
    <string name="see">See</string>
    <string name="dangerous_of_eating_rotten_fruit">Dangerous of eating rotten fruit :</string>
    <string name="_1_cause_allergic_reactions">1. Cause allergic reactions</string>
    <string name="_2_cause_respiratory_problems">2. Cause respiratory problems</string>
    <string name="_3_can_cause_nausea">3. Can cause nausea</string>
    <string name="_4_increase_the_risk_of_cancer">4. Increase the risk of cancer</string>
    <string name="history">History</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_free_trial">Login to get free trial 30 days</string>
    <string name="skip">Skip</string>

</resources>