<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CameraActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/take_a_picture"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_capture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/image_capture_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/placeholder" />

    <ImageView
        android:id="@+id/btn_capture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/button_take_photo_content"
        app:layout_constraintEnd_toStartOf="@+id/btn_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_capture"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/btn_upload"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/button_upload_photo_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_capture"
        app:layout_constraintTop_toBottomOf="@+id/img_capture"
        app:srcCompat="@drawable/upload" />

    <TextView
        android:id="@+id/text_view_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins"
        android:text="@string/take_photo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btn_capture"
        app:layout_constraintStart_toStartOf="@+id/btn_capture"
        app:layout_constraintTop_toBottomOf="@+id/btn_capture" />

    <TextView
        android:id="@+id/text_view_upload_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins"
        android:text="@string/upload_photo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btn_upload"
        app:layout_constraintStart_toStartOf="@+id/btn_upload"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scan"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_login"
        android:text="@string/scan"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_upload"
        app:layout_constraintStart_toStartOf="@+id/btn_capture"
        app:layout_constraintTop_toBottomOf="@+id/text_view_take_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>